# tess-atlas

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  PLD_pipeline.ipynb  README.md  build_website.sh  collect_notebooks.py  index.html  pyproject.toml  requirements.txt  run_toi.py  run_tois.py  setup.py  sonify.ipynb  temp_template.ipynb  template.ipynb  toipage.tpl
calibration/: .gitignore  chaplin_table4.txt  chaplin_table5.txt  run_fit.py  run_fits.py
docs/: CNAME  _config.yml  index.html  index.rst
notebooks/: toi-144.ipynb  toi-175.ipynb  toi-214.ipynb  toi-270.ipynb
paper/: .gitignore  Makefile  atlas.bib  atlas.out  atlas.tex  authors.tex  custom_commands.tex  dfmstyle.tex  dfmsymbols.tex  eoi.tex  extra_notes.tex  gen_links.py  links.tex  numbers.tex  probabilistic_model.tex  style.tex  symbols.tex
static/: tess-atlas.css
studies/: README.md  generate_slurm_copy_rsync_job.py  mwe_for_data_download.py
tess_atlas/: collect_notebooks.py  make_tois_homepage.py  run_toi.py  run_tois.py  stellar.py  template.ipynb  toi.py
test_jobgen/: toi.csv
tests/: __init__.py  conftest.py  mwe_for_data_download.py  test_analysis.py  test_analysis_summary.py  test_citations.py  test_data.py  test_exofop_interface.py  test_load_samples_demo.py  test_plots.py  test_posterior.py  test_slurm_job_generator.py  test_template_notebook.py  test_template_notebook_unittest.py  test_tic_data_download.py  test_toi_notebook.py  test_toi_notebook_metadata.py  test_toi_run_stats_recorder.py  test_utils.py  test_webbuild.py  (+1 more)
(+381 files in other folders)
